# sunholo-py

./: .gitignore  404.html  CLAUDE.md  CNAME  LICENSE.txt  MANIFEST.in  README.md  cloudbuild.yaml  ellipsis.Dockerfile  ellipsis.yaml  index.html  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.claude/: settings.json
.github/workflows/: comment-action.yml  deploy-githubpages.yml  github-release.yml  python-publish.yml  python-typecheck.yml  python-unittest.yml
assets/css/: styles.20161263.css  styles.42aa8f11.css  styles.5dac71e5.css  styles.6b090437.css  styles.73fd73cb.css  styles.81229296.css  styles.966bc335.css  styles.eda73bc3.css  styles.f6c7f565.css
assets/js/: 0058b4c6.10324078.js  0058b4c6.1daa3732.js  0058b4c6.4a74035c.js  0058b4c6.9ff04d41.js  0058b4c6.d21ae3b2.js  0058b4c6.ec9684cb.js  006a5307.74c53b72.js  01044300.1f7cb9ee.js  01044300.947757ff.js  01044300.abe08c8a.js  01044300.c5d69f7b.js  01698db5.18900a60.js  01698db5.b0abf9cc.js  01698db5.c2ae035e.js  01a85c17.15c98f0f.js  01a85c17.1ff9b7a2.js  01a85c17.f1efa36f.js  02f91629.8c6be85b.js  031793e1.92587bd8.js  035affc9.9f74d134.js  040bd8a8.b8def179.js  05397a8c.35d82a5f.js  05c388cc.5d3fdb66.js  0661f4f0.3045cd50.js  06d27af7.0cf0b0f4.js  06d27af7.132372f7.js  06d27af7.49d71306.js  06d27af7.71ce73fd.js  06d27af7.7262de94.js  06d27af7.9d151989.js  06d27af7.ad87c356.js  06d27af7.b26ca0fb.js  06d27af7.be5835f4.js  06d27af7.ddb98590.js  06d27af7.e493030f.js  073f51ec.9f57bbfb.js  077952dd.582fa4c2.js  096bfee4.f9dd890b.js  097f9526.5ab05b2e.js  09a6d81c.95fc1967.js  (+1741 more)
blog/: atom.xml  index.html  rss.xml
blog/ai-protocol-revolution/: index.html
blog/archive/: index.html
blog/authors/: index.html
blog/cognitive-design/: index.html
blog/dynamic-output-mdx/: index.html
blog/first-blog-post/: index.html
blog/long-blog-post/: index.html
blog/mdx-blog-post/: index.html
blog/subconscious-genai/: index.html
blog/tags/: index.html
blog/welcome/: index.html
build_scripts/: export_docstrings.py
config/: README.md  agent_config.yaml  cloud_run_urls.json  llm_config.yaml  loader_config.yaml  model_lookup.yaml  platform_config.yaml  prompt_config.yaml  users_config.yaml
docs/: .env.example  README.md  docusaurus.config.js  index.html  mcp-cloud-run-deployment.md  package-lock.json  package.json
docs/VACs/: index.html
docs/adk/: index.html
docs/agents/: index.html
docs/auth/: index.html
docs/blog/: 2024-10-09-cognitive-design.md  2024-10-15-dynamic-output-with-mdx.mdx  2024-10-22-subconscious-genai.md  2025-08-07-websites-post-ai.md  2025-09-20-ai-protocols.md  authors.yml
docs/channels/: index.html
docs/cli/: index.html
docs/config/: index.html
docs/databases/: index.html
docs/docs/: cli.md  config.md  functions.md  index.md  reference.md
docs/function-reference/: index.html
docs/functions/: index.html
docs/howto/: index.html
docs/integrations/: index.html
docs/intro/: index.html
docs/multivac/: index.html
docs/tapes/: config-list.tape  embed-demo.tape  install.tape  sunholo-vac-chat-headless.tape  sunholo-vac-chat-with-files.tape  sunholo-vac-chat.tape
docs/tools/: index.html
docs/troubleshooting/: version-mismatch.md
docs/ui/: index.html
examples/: MCP_README.md  README.md  a2a_agent_example.py  adk_agent_demo.py  async_task_runner_simple.py  extensible_mcp_demo.py  fastapi_vac_demo.py  fastapi_vac_demo_standalone.py  fastapi_vac_mcp_simple.py  fastmcp.json  mcp_fastmcp_example.py  mcp_server_example.py  sunholo_mcp_server.py
examples/mcp-cloud-run/: .env.example  Dockerfile  README.md  deploy-private.sh  deploy-public.sh  main.py  requirements.txt
llmops/agents/: dispatch_to_qa.py  route.py  special_commands.py
llmops/archive/: __init__.py
llmops/bots/: discord.py  webapp.py
llmops/chunker/: __init__.py  gcs.py
llmops/components/: __init__.py  prompt.py
llmops/pubsub/: __init__.py  process_pubsub.py
llmops/qna/: __init__.py  retry.py
llmops/streaming/: __init__.py
llmops/utils/: __init__.py  config.py  gcp.py  parsers.py
markdown-page/: index.html
scripts/: clean-egg-info.sh
src/sunholo/: __init__.py  custom_logging.py  langchain_types.py  traced_logging.py
sunholo/: __init__.py  logging.py  types.py
sunholo/agents/: __init__.py  chat_history.py  dispatch_to_qa.py  langserve.py  pubsub.py  route.py  special_commands.py  swagger.py  test_chat_history.py
sunholo/archive/: archive.py
sunholo/auth/: __init_.py  __init__.py  refresh.py  run.py
sunholo/azure/: __init__.py  auth.py  blobs.py  event_grid.py
sunholo/bots/: __init__.py  discord.py  webapp.py
sunholo/chunker/: __init__.py  azure.py  data_to_embed_azure.py  data_to_embed_pubsub.py  doc_handling.py  encode_metadata.py  gcs.py  images.py  loaders.py  message_data.py  pdfs.py  process_chunker_data.py  publish.py  pubsub.py  splitter.py
sunholo/cli/: chat_vac.py  cli.py  cli_init.py  configs.py  deploy.py  embedder.py  run_proxy.py  swagger.py  vertex.py
tests/: _test_datastore.py  test_access_control.py  test_adk.py  test_async.py  test_async_genai2.py  test_async_task_runner.py  test_channels.py  test_chat_history.py  test_chunker.py  test_config.py  test_config_manager.py  test_datastore.py  test_dispatch_to_qa.py  test_genai2.py  test_mcp_discovery.py  test_mcp_integration.py  test_swagger.py  test_thinking.py  test_tools_permissions.py  test_unstructured.py  test_vac_routes_fastapi.py  test_vac_routes_mcp.py
(+636 files in other folders)
