[metadata]
description-file = README.md

[mypy]
# Specify the directories or files to check with mypy
files = sunholo, tests

# Set the Python version to check against
python_version = 3.9

# Disallow untyped function definitions
#disallow_untyped_defs = True

# Disallow function definitions that do not have return types
disallow_untyped_calls = True

# Warn about returning 'Any' from functions
warn_return_any = True

# Warn about unused 'type: ignore' comments
warn_unused_ignores = True

# Enable strict Optional checks
strict_optional = True

# Ignore missing imports (e.g., for third-party packages)
ignore_missing_imports = True
